@@ -35,6 +35,7 @@ my @files = qw{MANIFEST}; \
 while (<>) { \
     chomp; \
     next if m{^\.}; \
+    next if m{^debian/}; \
     next if m{^rockspec/}; \
     push @files, $$_; \
 } \
@@ -89,6 +90,17 @@ rock:
 	luarocks pack rockspec/lua-codegen-$(VERSION)-$(REV).rockspec
 	luarocks pack rockspec/lua-codegen-lpeg-$(VERSION)-$(REV).rockspec
 
+debclean:
+	echo "lua-codegen ($(shell git describe --dirty)) unstable; urgency=medium" >  debian/changelog
+	echo ""                         >> debian/changelog
+	echo "  * UNRELEASED"           >> debian/changelog
+	echo ""                         >> debian/changelog
+	echo " -- $(shell git config --get user.name) <$(shell git config --get user.email)>  $(shell date -R)" >> debian/changelog
+	fakeroot debian/rules clean
+
+deb: debclean
+	fakeroot debian/rules binary
+
 check: test
 
 test: test.lua test.lpeg
@@ -132,5 +144,5 @@ clean:
 
 realclean: clean
 
-.PHONY: test rockspec CHANGES dist.info
+.PHONY: test rockspec deb debclean CHANGES dist.info
 
